<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Weather Forecast</string>
    <string name="CONTENT_AUTHORITY" translatable="false">com.sunshinemine</string>
    <string name="URL_FORMAT" translatable="false">https://api.openweathermap.org/data/2.5/onecall?lat=<xliff:g id="lattitude">%s</xliff:g>&amp;lon=<xliff:g id="longitude">%s</xliff:g>&amp;units=metric&amp;appid=8c7175339095430fdf24c1cac276d9d5</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">94043</string>
    <string name="pref_units_key">units</string>
    <string name="pref_city_key">city</string>
    <string name="sync_account_type" translatable="false">sunshinemine.com</string>
    <string name="pref_units_default">metric</string>
    <string name="pref_city_default" translatable="false">32.582039494628724,73.47173655981688/MANDIBAHAUDDIN</string>
    <string name="format_wind_mph" translatable="false"><xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_wind_kmh" translatable="false"><xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_pressure" translatable="false"><xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
    <string name="format_humidity" translatable="false"><xliff:g id="humidity">%1.0f</xliff:g> %%</string>
    <string name="format_temperature" translatable="false"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <string name="location_header" translatable="false">Location and Unit</string>
    <string name="sync_header" translatable="false">Sync</string>
    <string name="location_title">Your location</string>
    <string name="units_title">Your Units</string>
    <string name="city_title">City</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>
    <string name="format_notification" translatable="false"><xliff:g id="condition">%1$s</xliff:g> | High: <xliff:g id="high">%2$s\u00B0</xliff:g> | Low: <xliff:g id="low">%3$s\u00B0</xliff:g></string>
    <string name="pref_last_notification">last_notification</string>
    <string name="empty_forecast_list">No Weather Information Available. </string>
    <string name="empty_forecast_list_no_network">No Weather Information Available. \\n The Network is not available to fetch weather data.</string>
    <string name="empty_forecast_list_server_down">No Weather Information Available. \n The Server is down and not Returning Data.</string>
    <string name="empty_forecast_list_server_error">No Weather Information Available. \n The Server is not Valid.</string>
    <string name="pref_location_status_key" translatable="false">loc-status</string>
    <string name="pref_art_pack_label" translatable="false">Icon Pack</string>
    <string name="pref_art_pack_label_sunshine" translatable="false">Sunshine</string>
    <string name="pref_art_pack_label_cute_dogs" translatable="false">Cute dogs</string>
    <string name="pref_art_pack_key" translatable="false">art_pack</string>
    <string name="pref_art_pack_sunshine" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-xxhdpi/art_%s.png</string>
    <string name="format_full_friendly_date" translatable="false">
        <xliff:g id="day">%1$s</xliff:g>,
        <xliff:g id="date">%2$s</xliff:g>
    </string>
    <string name="today" translatable="false">Today</string>
    <string name="tomorrow" translatable="false">Tomorrow</string>
    <string name="title_widget_today" translatable="false">Sunshine Today</string>
    <string name="title_widget_detail" translatable="false">Sunshine Details</string>
    <string name="pref_pics_key" translatable="false">pics-key</string>
    <string name="pref_pics_default" translatable="false">icon</string>
    <string name="pics_title" translatable="false">Choose Picture to Display</string>
    <string name="default_notification_channel_id" translatable="false">default</string>
    <string name="detail_icon_transition_name" translatable="false">TN_DetailIcon</string>
    <string name="humidity" translatable="false">Humidity</string>
    <string name="pressure" translatable="false">Pressure</string>
    <string name="wind" translatable="false">Wind</string>
    <string name="condition_2xx" translatable="false">Storm</string>
    <string name="condition_3xx" translatable="false">Drizzle</string>
    <string name="condition_500" translatable="false">Light Rain</string>
    <string name="condition_501" translatable="false">Moderate Rain</string>
    <string name="condition_502" translatable="false">Heavy Rain</string>
    <string name="condition_503" translatable="false">Intense Rain</string>
    <string name="condition_504" translatable="false">Extreme Rain</string>
    <string name="condition_511" translatable="false">Freezing Rain</string>
    <string name="condition_520" translatable="false">Light Shower</string>
    <string name="condition_521" translatable="false">Shower</string>
    <string name="condition_522" translatable="false">Heavy Shower</string>
    <string name="condition_531" translatable="false">Ragged Shower</string>
    <string name="condition_600" translatable="false">Light Snow</string>
    <string name="condition_601" translatable="false">Snow</string>
    <string name="condition_602" translatable="false">Heavy Snow</string>
    <string name="condition_611" translatable="false">Sleet</string>
    <string name="condition_612" translatable="false">Shower Sleet</string>
    <string name="condition_615" translatable="false">Rain and Snow</string>
    <string name="condition_616" translatable="false">Rain and Snow</string>
    <string name="condition_620" translatable="false">Shower Snow</string>
    <string name="condition_621" translatable="false">Shower Snow</string>
    <string name="condition_622" translatable="false">Shower Snow</string>
    <string name="condition_701" translatable="false">Mist</string>
    <string name="condition_711" translatable="false">Smoke</string>
    <string name="condition_721" translatable="false">Haze</string>
    <string name="condition_731" translatable="false">Sand, Dust</string>
    <string name="condition_741" translatable="false">Fog</string>
    <string name="condition_751" translatable="false">Sand</string>
    <string name="condition_761" translatable="false">Dust</string>
    <string name="condition_762" translatable="false">Volcanic Ash</string>
    <string name="condition_771" translatable="false">Squalls</string>
    <string name="condition_781" translatable="false">Tornado</string>
    <string name="condition_800" translatable="false">Clear</string>
    <string name="condition_801" translatable="false">Mostly Clear</string>
    <string name="condition_802" translatable="false">Scattered Clouds</string>
    <string name="condition_803" translatable="false">Broken Clouds</string>
    <string name="condition_804" translatable="false">Overcast Clouds</string>
    <string name="condition_900" translatable="false">Tornado</string>
    <string name="condition_901" translatable="false">Tropical Storm</string>
    <string name="condition_902" translatable="false">Hurricane</string>
    <string name="condition_903" translatable="false">Cold</string>
    <string name="condition_904" translatable="false">Hot</string>
    <string name="condition_905" translatable="false">Windy</string>
    <string name="condition_906" translatable="false">Hail</string>
    <string name="condition_951" translatable="false">Calm</string>
    <string name="condition_952" translatable="false">Light Breeze</string>
    <string name="condition_953" translatable="false">Gentle Breeze</string>
    <string name="condition_954" translatable="false">Breeze</string>
    <string name="condition_955" translatable="false">Fresh Breeze</string>
    <string name="condition_956" translatable="false">Strong Breeze</string>
    <string name="condition_957" translatable="false">High Wind</string>
    <string name="condition_958" translatable="false">Gale</string>
    <string name="condition_959" translatable="false">Severe Gale</string>
    <string name="condition_960" translatable="false">Storm</string>
    <string name="condition_961" translatable="false">Violent Storm</string>
    <string name="condition_962" translatable="false">Hurricane</string>
    <string name="muzei_description" translatable="false">Today\'s weather</string>
    <string name="path_tick" translatable="false">M9,16.17L4.83,12l-1.42,1.41L9,19 21,7l-1.41,-1.41z</string>
    <string name="path_cross" translatable="false">M19,6.41L17.59,5 12,10.59 6.41,5 5,6.41 10.59,12 5,17.59 6.41,19 12,13.41 17.59,19 19,17.59 13.41,12z</string>
    <string name="tick" translatable="false">tick</string>
    <string name="cross" translatable="false">cross</string>
    <string name="groupTickCross" translatable="false">groupTickCross</string>
    <string name="settings_path" translatable="false">M 19.43 12.98 C 19.47 12.66 19.5 12.34 19.5 12 C 19.5 11.66 19.47 11.34 19.43 11.02 L 21.54 9.37 C 21.73 9.22 21.78 8.95 21.66 8.73 L 19.66 5.27 C 19.54 5.05 19.27 4.97 19.05 5.05 L 16.56 6.05 C 16.04 5.65 15.48 5.32 14.87 5.07 L 14.49 2.42 C 14.46 2.18 14.25 2 14 2 L 10 2 C 9.75 2 9.54 2.18 9.51 2.42 L 9.13 5.07 C 8.52 5.32 7.96 5.66 7.44 6.05 L 4.95 5.05 C 4.72 4.96 4.46 5.05 4.34 5.27 L 2.34 8.73 C 2.21 8.95 2.27 9.22 2.46 9.37 L 4.57 11.02 C 4.53 11.34 4.5 11.67 4.5 12 C 4.5 12.33 4.53 12.66 4.57 12.98 L 2.46 14.63 C 2.27 14.78 2.22 15.05 2.34 15.27 L 4.34 18.73 C 4.46 18.95 4.73 19.03 4.95 18.95 L 7.44 17.95 C 7.96 18.35 8.52 18.68 9.13 18.93 L 9.51 21.58 C 9.54 21.82 9.75 22 10 22 L 14 22 C 14.25 22 14.46 21.82 14.49 21.58 L 14.87 18.93 C 15.48 18.68 16.04 18.34 16.56 17.95 L 19.05 18.95 C 19.28 19.04 19.54 18.95 19.66 18.73 L 21.66 15.27 C 21.78 15.05 21.73 14.78 21.54 14.63 L 19.43 12.98 Z M 12 15.5 C 10.07 15.5 8.5 13.93 8.5 12 C 8.5 10.07 10.07 8.5 12 8.5 C 13.93 8.5 15.5 10.07 15.5 12 C 15.5 13.93 13.93 15.5 12 15.5 Z</string>
    <string name="intro_message" translatable="false">
        <![CDATA[
  This sample demonstrates the use of the MediaRouter API to display
  content on a secondary display.\n\nUse the "Media Route Action Item" in the ActionBar
  to select an output device. If your device supports Miracast wireless displays,
  you may need to enable "Wireless Display" functionality in the system settings.
  Secondary screen simulation can also be enabled from the "Developer Options".\n\n
  Once connected, use the "Change Color" button to change the background color of the secondary
  screen.
        ]]>
    </string>
    <string name="menu_present_to" translatable="false">Present to</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="secondary_connected" translatable="false">Connected to:\n%s</string>
    <string name="secondary_notconnected" translatable="false">No secondary display connected.</string>
    <string name="change_color" translatable="false">Change Color</string>
</resources>